// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`normalizeMdFile > compiles docs-basic fixture to markdown 1`] = `
"# Index

## Link

[Link](/foo.md)
[](/llms.txt)

## FileCodeBlock

\`\`\`tsx file="./foo.mdx"
# Foo

\`\`\`

## Mdx

import { List, Table } from '../components/index';
import { List as L } from '../components/index';

<List items={['foo', 'bar']} />

<L items={['L1', 'L2']} />

<Table>
  <div>123</div>

  <tr>
    <td>foo</td>
  </tr>

  <tr>
    <td>bar</td>
  </tr>
</Table>
"
`;

exports[`normalizeMdFile > compiles mdx-to-md 1`] = `
"# Index

## Link

[Link](/foo.md)
[](/llms.txt)

## FileCodeBlock

\`\`\`tsx file="./foo.mdx"
# Foo

\`\`\`

## Mdx

<!--List ->

<!--L ->

<!--Table ->
"
`;
